--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,6 +29,8 @@
     <p></p>
     <app-receta></app-receta>
 
+        <!-- Componente Propiedades -->
+    <app-propiedades></app-propiedades>
 
 
     <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
