--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<!-- Fixed navbar -->
+
 <nav class="navbar navbar-default">
   <div class="container">
     <div class="navbar-header">
@@ -12,29 +12,22 @@
     </div>
     <div id="navbar" class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Home</a></li>
         
-        
+        <li routerLinkActive="class">
+            <a [routerLink]="['receta']">Receta</a>
+        </li>  
+        <li routerLinkActive="class">
+            <a [routerLink]="['propiedades']">Propiedades</a>
+        </li>  
       </ul>
-    </div><!--/.nav-collapse -->
+    </div>
   </div>
 </nav>
 
 <!-- Begin page content -->
 <div class="container">
-  <div class="jumbotron">
-    <h1>{{title}}</h1>
-
-    <!-- Componente Receta -->
-    <p></p>
-    <app-receta></app-receta>
-
-        <!-- Componente Propiedades -->
-    <app-propiedades></app-propiedades>
-
-
-    <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
-  </div>
+  
+  <router-outlet></router-outlet>
 </div>
 
 <footer class="footer">
