Tengo que crear un usuario

--- a/src/app/page404/page404.component.html
+++ b/src/app/page404/page404.component.html
@@ -2,6 +2,6 @@
 
 <h1 class="text-center">Error 404 Pagina no Encontrada</h1>
 
-<img class="image-responsive" src="./assets/img/404new.png">
+<img class="image-responsive" src="./assets/img/descarga.png">
 
   </div>
