--- a/src/app/receta/receta.component.html
+++ b/src/app/receta/receta.component.html
@@ -1,28 +1,28 @@
 <div class="row">
   <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img class="fotogluten" *ngIf="isGlutenFree" src="{{fotogluten}}">
-      <img class="fotogluten" *ngIf="!isGlutenFree" src="{{fotoglutenfree}}">
-      <img src="{{foto}}" alt="{{nombre}}">
+      <img class="fotogluten" *ngIf="receta.isGlutenFree" src="{{fotogluten}}">
+      <img class="fotogluten" *ngIf="!receta.isGlutenFree" src="{{fotoglutenfree}}">
+      <img src="{{receta.foto}}" alt="{{receta.nombre}}">
 
       <div class="caption">
-        <h3>{{nombre | uppercase}}</h3>
-        <p>{{descripcion | slice:0:79}}...</p>
+        <h3>{{receta.nombre | uppercase}}</h3>
+        <p>{{receta.descripcion | slice:0:79}}...</p>
         <p>
-          <span class="cocinero">{{cocinero}}</span>
-          <span class="label label-primary" (click)="sumarLike()">{{likes}} Likes </span>
+          <span class="cocinero">{{receta.cocinero}}</span>
+          <span class="label label-primary" (click)="sumarLike()">{{receta.likes}} Likes </span>
 
 
           <section class="ingredientes">
      
             <h4 (click)="showingredientes()">Ingredientes
               <span class="glyphicon {{icono}}" aria-hidden="true"></span>
-           <span class="badge">{{ingredientes.length}}</span>
+           <span class="badge">{{receta.ingredientes.length}}</span>
             </h4>
         
             <ol *ngIf="show">
-              <li *ngFor="let ingrediente of ingredientes">
-                {{ingrediente}}
+              <li *ngFor="let ingre of receta.ingredientes">
+                {{ingre}}
               </li>
 
 
