--- a/src/app/usuario/usuario.component.html
+++ b/src/app/usuario/usuario.component.html
@@ -1,3 +1,94 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+    <title>Document</title>
+</head>
+<body>
+    
 <div class="container">
-<h1>Zona de usuarios</h1>
-</div>
+    <h1>Zona de usuarios</h1>
+    </div>
+    
+    <div class="formulario">
+    <form id="formulario">
+        <label for="nombre">Nombre</label>
+    <input type="text" id="nombre" name="nombre" required>
+    
+    <label for="apellido">Apellido</label>
+    <input type="apellido" id="apellido" name="apellido">
+    
+    
+    <label for="email">Email</label>
+    <input type="email" id="email" name="email">
+    
+    <label for="avatar">Avatar</label>
+    <input type="avatar" id="avatar" name="avatar">
+    
+    <label for="sexo">Sexo</label>
+    <input type="radio"  name="sexo" value="masculino">Masculino
+    <input type="radio"  name="sexo" value="femenino">Femenino
+    <input type="radio"  name="sexo" value="indefinido">Indefinido
+    
+    <input type="submit">
+    </form>
+    
+    </div>
+    
+    
+    
+    
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-3 col-sm-6">
+    
+                <div class="card hovercard">
+                    <div class="cardheader">
+    
+                    </div>
+                    <div class="avatar">
+                        <img alt="" src="https://i.pinimg.com/736x/61/9c/57/619c5741c5294ebd8d10923f67ddae4f--create-an-avatar-sites.jpg">
+                    </div>
+                    <div class="info">
+                        <div class="title">
+                            <a target="_blank" href="http://scripteden.com/">Script Eden</a>
+                        </div>
+                        <div class="desc"></div>
+                        <div class="desc">Curious developer</div>
+                        <div class="desc">Tech geek</div>
+                    </div>
+                    <div class="bottom">
+                        <a class="btn btn-primary btn-twitter btn-sm" href="https://twitter.com/webmaniac">
+                            <i class="fa fa-twitter"></i>
+                        </a>
+                        <a class="btn btn-danger btn-sm" rel="publisher"
+                           href="https://plus.google.com/+ahmshahnuralam">
+                            <i class="fa fa-google-plus"></i>
+                        </a>
+                        <a class="btn btn-primary btn-sm" rel="publisher"
+                           href="https://plus.google.com/shahnuralam">
+                            <i class="fa fa-facebook"></i>
+                        </a>
+                        <a class="btn btn-warning btn-sm" rel="publisher" href="https://plus.google.com/shahnuralam">
+                            <i class="fa fa-behance"></i>
+                        </a>
+                    </div>
+                </div>
+    
+            </div>
+    
+        </div>
+       
+            </div>
+</body>
+</html>
+
+
+
+
+
+    
+    
