--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,6 +19,13 @@
         <li routerLinkActive="class">
             <a [routerLink]="['propiedades']">Propiedades</a>
         </li>  
+
+        <li routerLinkActive="class">
+          <a [routerLink]="['usuario']">Usuario</a>
+      </li>  
+      <li routerLinkActive="class">
+        <a [routerLink]="['concesionario']">Concesionario</a>
+    </li>  
       </ul>
     </div>
   </div>
