--- a/src/app/concesionario/concesionarioformulario/concesionarioformulario.component.html
+++ b/src/app/concesionario/concesionarioformulario/concesionarioformulario.component.html
@@ -19,7 +19,7 @@
         <form class="form-inline">
           <div class="col-xs-6">
             <label class="center-block">Marca:
-              <input class="form-control" >
+              <input class="form-control" formControlName="marca" >
             </label>
             <div class="text-danger">
               *La Marca no es correcta, mínimo 4 letras
