--- a/src/app/concesionario/concesionarioformulario/concesionarioformulario.component.html
+++ b/src/app/concesionario/concesionarioformulario/concesionarioformulario.component.html
@@ -15,7 +15,7 @@
       </div>
 
       <div class="modal-body">
-
+<!-->Meter un formgroup -->
         <form class="form-inline">
           <div class="col-xs-6">
             <label class="center-block">Marca:
