--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -27,7 +27,9 @@
               <li routerLinkActive="active">
                 <a [routerLink]="['concesionario']">Concesionario</a>
               </li>
-
+              <li routerLinkActive="active">
+                <a [routerLink]="['formulariobasico']">Formulario Basico</a>
+              </li>
               <li routerLinkActive="active">
                   <a [routerLink]="['recetario']">Recetario</a>
                 </li>
